--- a/bug.html
+++ b/bug.html
@@ -7,7 +7,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main.css?v6">
+    <link rel="stylesheet" href="css/main.css?v7">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
@@ -101,11 +101,13 @@
                                     <span style="background: #CFA97E;"></span>
                                 </div>
                                 <div class="order_size_wrap">
-                                    <select name="" id="">
-                                        <option value="">s</option>
-                                        <option value="">s</option>
-                                        <option value="">s</option>
-                                    </select>
+                                    <div class="select_box">
+                                        <select name="" id="">
+                                            <option value="">s</option>
+                                            <option value="">s</option>
+                                            <option value="">s</option>
+                                        </select>
+                                    </div>
                                     <a href="#modal_tab" class="popup-with-zoom-anim">
                                         <img src="img/bug/lenta.svg" alt="lenta">
                                         Калькулятор размера</a>
@@ -131,18 +133,10 @@
                         <div class="bug_item_wrap">
                             <div class="bug_slider">
                                 <div class="swiper_bug">
-                                    <div class="swiper-wrapper">
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                    </div>
-                                    <div class="swiper-pagination"></div>
+                                    <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
+                                </div>
+                                <div class="call_btn_wrap">
+                                    <img src="img/btn_bug.svg" loading="lazy" alt="btn">
                                 </div>
                             </div>
                             <div class="bug_item_info">
@@ -178,18 +172,10 @@
                         <div class="bug_item_wrap">
                             <div class="bug_slider">
                                 <div class="swiper_bug">
-                                    <div class="swiper-wrapper">
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                    </div>
-                                    <div class="swiper-pagination"></div>
+                                    <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
+                                </div>
+                                <div class="call_btn_wrap">
+                                    <img src="img/btn_bug.svg" loading="lazy" alt="btn">
                                 </div>
                             </div>
                             <div class="bug_item_info">
@@ -225,18 +211,10 @@
                         <div class="bug_item_wrap">
                             <div class="bug_slider">
                                 <div class="swiper_bug">
-                                    <div class="swiper-wrapper">
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                    </div>
-                                    <div class="swiper-pagination"></div>
+                                    <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
+                                </div>
+                                <div class="call_btn_wrap">
+                                    <img src="img/btn_bug.svg" loading="lazy" alt="btn">
                                 </div>
                             </div>
                             <div class="bug_item_info">
@@ -635,6 +613,13 @@
         </div>
     </div>
 
+    <div class="modal_btn_wrap">
+        <div class="modal_btn_bottom">
+            <a href="#">Добавить в избранное</a>
+            <a href="#">Удалить</a>
+            <a href="#">Отмена</a>
+        </div>
+    </div>
 
     <div id="modal_tab" class="zoom-anim-dialog modal_tabl mfp-hide">
         <div class="modal_table_wrappers">
