--- a/order-page-4.html
+++ b/order-page-4.html
@@ -7,7 +7,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main.css?v6">
+    <link rel="stylesheet" href="css/main.css?v7">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
@@ -96,18 +96,10 @@
                         <div class="bug_item_wrap">
                             <div class="bug_slider">
                                 <div class="swiper_bug">
-                                    <div class="swiper-wrapper">
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                    </div>
-                                    <div class="swiper-pagination"></div>
+                                    <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
+                                </div>
+                                <div class="call_btn_wrap">
+                                    <img src="img/btn_bug.svg" loading="lazy" alt="btn">
                                 </div>
                             </div>
                             <div class="bug_item_info">
@@ -143,18 +135,10 @@
                         <div class="bug_item_wrap">
                             <div class="bug_slider">
                                 <div class="swiper_bug">
-                                    <div class="swiper-wrapper">
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                    </div>
-                                    <div class="swiper-pagination"></div>
+                                    <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
+                                </div>
+                                <div class="call_btn_wrap">
+                                    <img src="img/btn_bug.svg" loading="lazy" alt="btn">
                                 </div>
                             </div>
                             <div class="bug_item_info">
@@ -190,18 +174,10 @@
                         <div class="bug_item_wrap">
                             <div class="bug_slider">
                                 <div class="swiper_bug">
-                                    <div class="swiper-wrapper">
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                    </div>
-                                    <div class="swiper-pagination"></div>
+                                    <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
+                                </div>
+                                <div class="call_btn_wrap">
+                                    <img src="img/btn_bug.svg" loading="lazy" alt="btn">
                                 </div>
                             </div>
                             <div class="bug_item_info">
@@ -234,7 +210,7 @@
                                 <p class="bug_price">6 990 руб <span>7550 руб</span></p>
                             </div>
                         </div>
-                    </div>               
+                    </div>         
                     <div class="bug_all order_all">
                         <p>Итого:</p>
                         <p>3 459 руб</p>
@@ -666,6 +642,14 @@
                 <p class="item_bottom_title">Все еще остались вопросы?</p>
                 <p class="item_bottom_text">Все в порядке. Наш <a href="#">эксперт</a> поможет вам подобрать идеальный размер.</p>
             </div>
+        </div>
+    </div>
+
+    <div class="modal_btn_wrap">
+        <div class="modal_btn_bottom">
+            <a href="#">Добавить в избранное</a>
+            <a href="#">Удалить</a>
+            <a href="#">Отмена</a>
         </div>
     </div>
 
