--- a/order.html
+++ b/order.html
@@ -7,7 +7,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main.css?v6">
+    <link rel="stylesheet" href="css/main.css?v7">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
@@ -87,18 +87,10 @@
                         <div class="bug_item_wrap">
                             <div class="bug_slider">
                                 <div class="swiper_bug">
-                                    <div class="swiper-wrapper">
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                    </div>
-                                    <div class="swiper-pagination"></div>
+                                    <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
+                                </div>
+                                <div class="call_btn_wrap">
+                                    <img src="img/btn_bug.svg" loading="lazy" alt="btn">
                                 </div>
                             </div>
                             <div class="bug_item_info">
@@ -134,18 +126,10 @@
                         <div class="bug_item_wrap">
                             <div class="bug_slider">
                                 <div class="swiper_bug">
-                                    <div class="swiper-wrapper">
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                    </div>
-                                    <div class="swiper-pagination"></div>
+                                    <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
+                                </div>
+                                <div class="call_btn_wrap">
+                                    <img src="img/btn_bug.svg" loading="lazy" alt="btn">
                                 </div>
                             </div>
                             <div class="bug_item_info">
@@ -181,18 +165,10 @@
                         <div class="bug_item_wrap">
                             <div class="bug_slider">
                                 <div class="swiper_bug">
-                                    <div class="swiper-wrapper">
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                    </div>
-                                    <div class="swiper-pagination"></div>
+                                    <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
+                                </div>
+                                <div class="call_btn_wrap">
+                                    <img src="img/btn_bug.svg" loading="lazy" alt="btn">
                                 </div>
                             </div>
                             <div class="bug_item_info">
@@ -269,12 +245,16 @@
                     <div class="order_item_box">
                         <p class="order_item_title">Доставка заказа</p>
                         <div class="order_item_select">
-                            <select name="" id="">
-                                <option value="">Адрес</option>
-                            </select>
-                            <select name="" id="">
-                                <option value="">Выберите город</option>
-                            </select>
+                            <div class="select_box">
+                                <select name="" id="">
+                                    <option value="">Адрес</option>
+                                </select>
+                            </div>
+                            <div class="select_box">
+                                <select name="" id="">
+                                    <option value="">Выберите город</option>
+                                </select>
+                            </div>
                             <p>*Введите название населенного пункта для определения условий доставки</p>
                         </div>
                         <div class="radio call_adress_1">
@@ -668,6 +648,14 @@
                 <p class="item_bottom_title">Все еще остались вопросы?</p>
                 <p class="item_bottom_text">Все в порядке. Наш <a href="#">эксперт</a> поможет вам подобрать идеальный размер.</p>
             </div>
+        </div>
+    </div>
+
+    <div class="modal_btn_wrap">
+        <div class="modal_btn_bottom">
+            <a href="#">Добавить в избранное</a>
+            <a href="#">Удалить</a>
+            <a href="#">Отмена</a>
         </div>
     </div>
 
