--- a/page-item-2.html
+++ b/page-item-2.html
@@ -191,7 +191,7 @@
                     </div>
                     <div class="modal_size_wrap">
                         <div class="size_item">S</div>
-                        <div class="size_item">M</div>
+                        <div class="size_item active">M</div>
                         <div class="size_item">L</div>
                         <div class="size_item">XL</div>
                         <div class="size_item disabled">2XL</div>
@@ -199,20 +199,12 @@
                         <div class="size_item">4XL</div>
                         <div class="size_item">5XL</div>
                     </div>
-                    <p class="choince_size">Выберите размер</p>
                     <a href="#modal_tab" class="modal_size popup-with-zoom-anim"><img src="img/modal/size.svg" loading="lazy" alt="size"> Калькулятор размера</a>
-                    <div class="action_box">
-                        <p class="action_text">При покупке 2 корсетов <span>получи 65% скидку</span></p>
-                        <div class="action_sale">
-                            <p class="action_price">6 990 руб <span>6 990 руб</span></p>
-                            <p class="action_ec">Экономия: 700 руб</p>
-                        </div>
-                    </div>
                     <p class="modal_price">6 990 руб</p>
-                    <p class="warning">В данном размере остался 1 товар.<br> Поспешите!</p>
+                    <p class="warning">Этот товар закончился.</p>
                     <div class="item_modal_btn">
-                        <a href="#">Купить</a>
-                        <div class="select">
+                        <a  class="popup-with-zoom-anim" href="#admission">Сообщить о поступлении</a>
+                        <div class="select disabled_select">
                             <select name="">
                                 <option value="1">1</option>
                                 <option value="1">2</option>
