--- a/thank_2.html
+++ b/thank_2.html
@@ -7,7 +7,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main.css?v6">
+    <link rel="stylesheet" href="css/main.css?v7">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
@@ -90,7 +90,7 @@
                         <p class="order_data_text">
                             Дата заказа <span>28 мая 2021</span>
                         </p> 
-                        <div class="order_bottom">
+                        <div class="order_bottom show_items_click">
                             <p>Товаров: <span>4</span></p>
                             <p>Сумма: <span>2 450 руб</span></p>
                         </div>
@@ -99,17 +99,7 @@
                         <div class="bug_item_wrap">
                             <div class="bug_slider">
                                 <div class="swiper_bug">
-                                    <div class="swiper-wrapper">
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                    </div>
+                                    <img src="img/home/item_img.png" width="110" loading="lazy" alt="item"> 
                                     <div class="swiper-pagination"></div>
                                 </div>
                             </div>
@@ -117,28 +107,13 @@
                                 <a href="#" class="bug_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</a>
                                 <p class="bug_attr">Латексная Дышащая майка</p>
                                 <p class="bug_attr">Размер: 
-                                    <select name="">
-                                        <option value="">Xl</option>
-                                        <option value="">Xl</option>
-                                        <option value="">Xl</option>
-                                    </select>
-                                    <img src="img/bug/arr.svg" alt="arr">
+                                    <span>XL</span>
                                 </p>
                                 <p class="bug_attr">Цвет: 
-                                    <select name="">
-                                        <option value="">Бежевый</option>
-                                        <option value="">Бежевый</option>
-                                        <option value="">Бежевый</option>
-                                    </select>
-                                    <img src="img/bug/arr.svg" alt="arr">
+                                    <span>Бежевый</span>
                                 </p>
                                 <p class="bug_attr">Количество: 
-                                    <select name="">
-                                        <option value="">1</option>
-                                        <option value="">2</option>
-                                        <option value="">3</option>
-                                    </select>
-                                    <img src="img/bug/arr.svg" alt="arr">
+                                    <span>1</span>
                                 </p>
                                 <p class="bug_price">6 990 руб <span>7550 руб</span></p>
                             </div>
@@ -146,17 +121,7 @@
                         <div class="bug_item_wrap">
                             <div class="bug_slider">
                                 <div class="swiper_bug">
-                                    <div class="swiper-wrapper">
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                    </div>
+                                    <img src="img/home/item_img.png" width="110" loading="lazy" alt="item"> 
                                     <div class="swiper-pagination"></div>
                                 </div>
                             </div>
@@ -164,28 +129,13 @@
                                 <a href="#" class="bug_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</a>
                                 <p class="bug_attr">Латексная Дышащая майка</p>
                                 <p class="bug_attr">Размер: 
-                                    <select name="">
-                                        <option value="">Xl</option>
-                                        <option value="">Xl</option>
-                                        <option value="">Xl</option>
-                                    </select>
-                                    <img src="img/bug/arr.svg" alt="arr">
+                                    <span>XL</span>
                                 </p>
                                 <p class="bug_attr">Цвет: 
-                                    <select name="">
-                                        <option value="">Бежевый</option>
-                                        <option value="">Бежевый</option>
-                                        <option value="">Бежевый</option>
-                                    </select>
-                                    <img src="img/bug/arr.svg" alt="arr">
+                                    <span>Бежевый</span>
                                 </p>
                                 <p class="bug_attr">Количество: 
-                                    <select name="">
-                                        <option value="">1</option>
-                                        <option value="">2</option>
-                                        <option value="">3</option>
-                                    </select>
-                                    <img src="img/bug/arr.svg" alt="arr">
+                                    <span>1</span>
                                 </p>
                                 <p class="bug_price">6 990 руб <span>7550 руб</span></p>
                             </div>
@@ -193,17 +143,7 @@
                         <div class="bug_item_wrap">
                             <div class="bug_slider">
                                 <div class="swiper_bug">
-                                    <div class="swiper-wrapper">
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                      <div class="swiper-slide">
-                                        <img src="img/home/item_img.png" width="110" loading="lazy" alt="item">  
-                                      </div>
-                                    </div>
+                                    <img src="img/home/item_img.png" width="110" loading="lazy" alt="item"> 
                                     <div class="swiper-pagination"></div>
                                 </div>
                             </div>
@@ -211,28 +151,13 @@
                                 <a href="#" class="bug_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</a>
                                 <p class="bug_attr">Латексная Дышащая майка</p>
                                 <p class="bug_attr">Размер: 
-                                    <select name="">
-                                        <option value="">Xl</option>
-                                        <option value="">Xl</option>
-                                        <option value="">Xl</option>
-                                    </select>
-                                    <img src="img/bug/arr.svg" alt="arr">
+                                    <span>XL</span>
                                 </p>
                                 <p class="bug_attr">Цвет: 
-                                    <select name="">
-                                        <option value="">Бежевый</option>
-                                        <option value="">Бежевый</option>
-                                        <option value="">Бежевый</option>
-                                    </select>
-                                    <img src="img/bug/arr.svg" alt="arr">
+                                    <span>Бежевый</span>
                                 </p>
                                 <p class="bug_attr">Количество: 
-                                    <select name="">
-                                        <option value="">1</option>
-                                        <option value="">2</option>
-                                        <option value="">3</option>
-                                    </select>
-                                    <img src="img/bug/arr.svg" alt="arr">
+                                    <span>1</span>
                                 </p>
                                 <p class="bug_price">6 990 руб <span>7550 руб</span></p>
                             </div>
@@ -268,11 +193,13 @@
                                     <span style="background: #CFA97E;"></span>
                                 </div>
                                 <div class="order_size_wrap">
-                                    <select name="" id="">
-                                        <option value="">s</option>
-                                        <option value="">s</option>
-                                        <option value="">s</option>
-                                    </select>
+                                    <div class="select_box">
+                                        <select name="" id="">
+                                            <option value="">s</option>
+                                            <option value="">s</option>
+                                            <option value="">s</option>
+                                        </select>
+                                    </div>
                                     <a href="#modal_tab" class="popup-with-zoom-anim">
                                         <img src="img/bug/lenta.svg" alt="lenta">
                                         Калькулятор размера</a>
@@ -724,6 +651,14 @@
                 <p class="item_bottom_title">Все еще остались вопросы?</p>
                 <p class="item_bottom_text">Все в порядке. Наш <a href="#">эксперт</a> поможет вам подобрать идеальный размер.</p>
             </div>
+        </div>
+    </div>
+
+    <div class="modal_btn_wrap">
+        <div class="modal_btn_bottom">
+            <a href="#">Добавить в избранное</a>
+            <a href="#">Удалить</a>
+            <a href="#">Отмена</a>
         </div>
     </div>
 
