--- a/lk.html
+++ b/lk.html
@@ -227,25 +227,25 @@
                                     <form class="user_data">
                                         <div class="input_box">
                                             <input type="text" placeholder="Имя" value="Валерия">
-                                            <a href="#edit_name" class="popup-with-zoom-anim">
+                                            <a href="#edit_name" class="popup-with-zoom-anim pencil">
                                                 <img src="img/lk/pencil.svg" loading="lazy" alt="pencil">
                                             </a>
                                         </div>
                                         <div class="input_box">
                                             <input type="text" placeholder="Фамилия" value="Кравцова">
-                                            <a href="#edit_sur" class="popup-with-zoom-anim">
+                                            <a href="#edit_sur" class="popup-with-zoom-anim pencil">
                                                 <img src="img/lk/pencil.svg" loading="lazy" alt="pencil">
                                             </a>
                                         </div>
                                         <div class="input_box">
                                             <input type="text" placeholder="E-mail" value="sfbghed@gmail.com">
-                                            <a href="#edit_mail" class="popup-with-zoom-anim">
+                                            <a href="#edit_mail" class="popup-with-zoom-anim pencil">
                                                 <img src="img/lk/pencil.svg" loading="lazy" alt="pencil">
                                             </a>
                                         </div>
                                         <div class="input_box">
                                             <input type="tel" placeholder="Телефон" value="+729 658 45 654">
-                                            <a href="#edit_phone" class="popup-with-zoom-anim">
+                                            <a href="#edit_phone" class="popup-with-zoom-anim pencil">
                                                 <img src="img/lk/pencil.svg" loading="lazy" alt="pencil">
                                             </a>
                                         </div>
